--- a/Sources/Background.tex
+++ b/Sources/Background.tex
@@ -22,7 +22,7 @@ Talk about previous approach
 
 
 \section{Family Polymorphism and Nested Composition}
-
+\label{sec:ernst}
 % %-------------------------------------------------------------------------------
 % \subsection{Motivation: Family Polymorphism}
 
