--- a/Sources/Nested.tex
+++ b/Sources/Nested.tex
@@ -18,9 +18,8 @@ supports \emph{nested composition}. Nested composition enables encoding simple
 forms of family polymorphism. More complex forms of family polymorphism,
 involving binary methods~\citep{bruce1995binary} and mutable state are not yet
 supported, but are interesting avenues for future work. Nevertheless, in \namee,
-it is possible, for example, to encode Ernst's elegant family-polymorphism
-solution~\citep{Ernst_2001} to the Expression Problem (cf.
-\cref{nested:sec:overview}). Compared to \oname the essential novelty of
+it is possible, for example, to encode \citeauthor{Ernst_2001}'s elegant family-polymorphism
+solution to the Expression Problem. Compared to \oname the essential novelty of
 \namee are distributivity rules between function/record types and intersection
 types. These rules are the delta that enable extending the simple forms of
 multiple inheritance/composition supported by \oname into a more powerful form
@@ -51,9 +50,9 @@ deal with the possibility of incoherence, introduced by the merge operator. Inco
 is a non-issue in the previous BCD-based calculi because they do not feature
 this merge operator or any other source of incoherence.
 Although previous work on disjoint intersection types
-proposes a solution to coherence, the solution imposes several ad-hoc restrictions
+proposes a solution to coherence, the solution imposes several ad-hoc restrictions (cf. \cref{sec:comparision})
 to guarantee the uniqueness of the elaboration and thus allow for a simple
-syntactic proof of coherence (cf. \cref{sec:comparision}). Most
+syntactic proof of coherence. Most
 importantly, it makes it hard or impossible to adapt the proof to extensions of
 the calculus, such as the new subtyping rules required by the BCD system.
 
@@ -71,10 +70,7 @@ In \namee this distinction is not necessary; top-like types are handled like all
 other types. Secondly, the method based on logical relations is more powerful
 because it is based on semantic rather than syntactic equality. Finally, the
 removal of the ad-hoc side-conditions makes adding new extensions, such as
-support for BCD-style subtyping, easier. In order to deal with the complexity of
-the elaboration semantics of \namee, we employ binary logical relations that are
-heterogeneous, parameterized by two types; the fundamental property is also
-reformulated to account for bidirectional type-checking.
+support for BCD-style subtyping, easier.
 
 
 \input{Sources/Nested/overview.tex}
